Change service type from LoadBalancer to ClusterIP

--- a/k8s/app-service.yml
+++ b/k8s/app-service.yml
@@ -4,7 +4,7 @@ metadata:
   name: healthcare-service
   namespace: healthcare
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 80
     targetPort: 8080
